stylesheets/home.css
/* ... */
 .white-box {
  display: flex;
  flex-direction: column;
  justify-content: space-around; 
  width: 312px;
  height: 240px;
  background: #FFFFFF 0% 0% no-repeat padding-box; 
  position: relative;
  left: 1rem;
  z-index: 0; 
  top: 4rem; 
 }

.white-box-bold {
  font: Bold 22px/28px Helvetica;
  text-align: center;
  color: #354463;
  width: 278px;
  height: 78px;
  align-self: center;
}

 .white-link-text {
  text-align: center;
  text-decoration: underline;
  font: lighter 14px/17px Helvetica;
  letter-spacing: -0.16px;
  color: #354463;
  width: 15rem;
  padding-left:2rem;
 }

 .another-small-blue-box {
  background: #354463 0% 0% no-repeat padding-box;
  font: normal 14px/17px Helvetica;
  position: relative;
  width: 160px;
  height: 40px;
  letter-spacing: 0.56px;
  color: #FFFFFF;
  text-align: center;
 }

 .torquise-box {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  position: relative;
  align-content: center;
  width: 92%;
  height: 15.5rem;
  z-index: 2;
  top: 5rem;
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: 50% 50%;
  grid-gap: 0rem;
  padding: 1rem; 
  left: 0rem;
}

.bullet-title {
  font: Bold 18px/22px Helvetica;
  color: #354463;
}

.subtext-torquire-box {
  width: 100%;
  height: 62px;
  font: lighter 14px/20px Helvetica;
  letter-spacing: -0.14px;
  color: #354463;
}

.another-small-blue-box {
    position: relative;
    top: 6rem;
    z-index: 3;
    left: 5rem;
}

.issue-text-take {
  position: relative;
  top: 0.8rem;
}

.what-we-do-blue-box {
  width: 100%;
  height: 1850px;
  background: #354463 0% 0% no-repeat padding-box;
  position: relative;
  top: 16.9rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;

}

.mission-section {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  position: relative;
  padding: 5px;
  top: 0rem;
}

.button-what-we-do {
  position: relative;
  width: 160px;
  height: 40px;
  margin-bottom: 48px;
  background: #FFFFFF 0% 0% no-repeat padding-box;
  top: 3rem;
}

.text-what-we-do{
  text-align: center;
  font: normal 14px/17px Helvetica;
  letter-spacing: 0.56px;
  color: #354463;
  
}

.mission-text {
  position: relative;
  text-align: center;
  font: Bold 22px/28px Helvetica;
  letter-spacing: 0;
  padding: 5px;
  color: #FFFFFF;
  width: 302px;
  height: 134px;
  
}

.white-box-second {
  width: 312px;
  height: 415px;
  background: #FFFFFF 0% 0% no-repeat padding-box;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 2rem;

}

.center-small-img {
  position: relative;
  bottom: 2rem;
}

.title-text-whitebox {
  text-align: center;
  font: Bold 18px/22px Helvetica;
  color: #354463;
}

.subtext-whitebox-blue {
  text-align: center;
  font: lighter 14px/20px Helvetica;
  letter-spacing: -0.14px;
  color: #354463;
}

.readmore-button-one {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 100px;
  width: 152px;
  height: 40px;
  font: Bold 16px/20px Helvetica;
  letter-spacing: 0;
  color: #354463;
}
.readmore-button-two {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 100px;
  width: 152px;
  height: 40px;
  font: Bold 16px/20px Helvetica;
  letter-spacing: 0;
  color: #354463;
}

.readmore-button-three {
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 100px;
  width: 152px;
  height: 40px;
  font: Bold 16px/20px Helvetica;
  letter-spacing: 0;
  color: #354463;
}

.readmore-text {
  position: relative;
  text-align: center;
  bottom: 0.5rem;
}

.climate-change-section {
  position: relative;
  background: transparent url('/img/Did-you-know-background-mobile.png') 0% 0% no-repeat padding-box;
  background-size: 100% 100%;
  display: grid;
  grid-template-rows: 2fr 1.25fr 1fr 1fr 1fr .15fr;
  top: 16.9rem;
  grid-gap: 3rem;
  justify-items: center;
}
.climate-change-text {
  display: flex;
  flex-direction: column;
}
.stylishcc-text-section {
  text-align: left;
  font: normal 44px/46px Flood Std;
  color: #FFFFFF;
  width: 302px;
  height: 192px;
  align-self: center;
  position: relative;
  bottom: 1rem;
  padding: 5px;
  }

.take-action-button {
  width: 152px;
  height: 40px;
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 100px;
  text-align: left;
  position: relative;
  top: 1.4rem;
  left: 1rem;
}

.text-take-action {
  font: Bold 16px/20px Helvetica;
  color: #354463;
  text-align: left;
  
  position: relative;
  left: 0.5rem;
  bottom: 0.45rem;
}

.did-you-know-button {
  text-align: center;
  font: normal 14px/17px Helvetica;
  letter-spacing: 0.56px;
  color: #FFFFFF;
  background: #354463 0% 0% no-repeat padding-box;
  width: 160px;
  height: 40px;
  position: absolute;
  top: 20rem;
  left: 7.5rem;
}


.did-you-know-text {
  text-align: center;
  position: relative;
  bottom: 0.1rem;
}

.box-white-facts {
  background: #FFFFFF 0% 0% no-repeat padding-box;
  width: 312px;
  height: 136px;
  align-self: center;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.fact-text-title{
  font: Bold 22px/28px Helvetica;
  color: #354463;
  width: auto;
  height: 1.38rem;
  padding-top: 5px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
} 

.twitter-icon-bg {
  width: 32px;
  height: 32px;
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 15px;
  position: relative;
  left: 1rem;
  top: 1.5rem
}
.icon-img {
  position: relative;
  left: 8px;
}

.fb-icon-bg {
  width: 50px;
  height: 25px;
  background: #C1F7D5 0% 0% no-repeat padding-box;
  border-radius: 50px;
  position: relative;
  left: 2.7rem;
  top: 1.5rem;
}

.fb-icon-img {
  position: relative;
  left: 8px;
  top: 4px;
}
/* ... */

